-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.4.0-beta
-
None
-
Is observed on MS Windows, but seems to be «crossplatform» :)
Previously compiled project is run on F5 if current compilation is unsuccessful.
Steps to reproduce:
- Open a project and compile it successfully.
- Change something in the sources so that there would be some syntax or linking errors.
- Select Build → Run or Debug → Start Debugging → Start Debugging.
- The building will fail but Qt Creator will anyway start the last successful version of the application.
Expected behaviour:
The Qt Creator should not start the application, the developer needs to analyze the errors, correct them and build the application again. If this behaviour is treated as a feature, not a bug, then it would be nice to have an option to disable this.
- replaces
-
QTCREATORBUG-6591 Creator runs the project which didn't compile
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-6458 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 8250,2 | process_ctrl_c_stub: forward exit code of the child process | 2.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |